Refactor code to improve runtime recommendation logic
Signed-off-by: Saad Khan <saakhan@ibm.com>